<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        android:padding="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/logo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/placeholder_username" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:password="true"
                android:hint="@string/placeholder_password" />

            <Button
                android:id="@+id/sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_login_txt"></Button>

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:autoLink="all"
                android:gravity="right"
                android:linksClickable="true"
                android:text="@string/str_forgot_password" />
        </LinearLayout>

        <View
            style="@style/Divider"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"/>

        <!--Login Alternatively Buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_sign_up_txt"></Button>

            <Button
                android:id="@+id/login_with_google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_login_with_google" />

            <Button
                android:id="@+id/login_with_facebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_login_with_facebook" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>